appId: com.pontistudios.mindsherpa
---
- runFlow: ../auth/login.yaml
- tapOn: "FOCUS"
- waitForAnimationToEnd
- swipe:
    direction: RIGHT
    element:
      id: focus-item-0
    duration: 150
- swipe:
    direction: RIGHT
    element:
      id: focus-item-0
    duration: 150
- waitForAnimationToEnd
